--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,5 +8,6 @@
 
 body {
     background-color: #11091a;
-    background-image: url(/src/img/fundo.png);
+    background-image: url(/src/images/fundo.png);
 }
+
