--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@ body {
   font-family: 'Inter', sans-serif;
   margin: 0;
   padding: 0;
-  color: #333;
+  color: #ffffff;
   line-height: 1.6;
+  background: rgb(2,0,36);
 }
 
 .container {
@@ -15,11 +16,9 @@ body {
   padding: 2rem;
 }
 
-/* Estilos do cabeçalho */
 .header {
-  background-color: #4338ca;
+  background-color: #1400f5;
   color: white;
-  padding: 1.5rem 0;
   margin-bottom: 4rem;
   text-align: center;
 }
@@ -42,7 +41,6 @@ body {
   transform: scale(1.1);
 }
 
-/* Seções gerais */
 .section {
   padding: 4rem 0;
 }
@@ -50,7 +48,7 @@ body {
 .section-title {
   font-size: 2.5rem;
   font-weight: 700;
-  color: #4338ca;
+  color: #ca3838;
   text-align: center;
   margin-bottom: 2.5rem;
 }
@@ -106,7 +104,6 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-/* Sobre mim */
 .about-me {
   display: flex;
   align-items: center;
@@ -130,35 +127,35 @@ body {
     margin-top: 2rem;
   }
   
-  .skill {
-    display: flex;
-    align-items: center;
-    background-color: #4338ca;
-    color: white;
-    padding: 0.75rem 1.25rem;
-    border-radius: 0.5rem;
-    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
+.skill {
+  display: flex;
+  align-items: center;
+  background-color: #4338ca;
+  color: white;
+  padding: 0.75rem 1.25rem;
+  border-radius: 0.5rem;
+  transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
   
-  .skill:hover {
-    background-color: #6b5ed8;
-    transform: translateY(-4px);
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
-  }
+.skill:hover {
+  background-color: #6b5ed8;
+  transform: translateY(-4px);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
+}
   
-  /* Estilo do ícone */
-  .skill i {
-    font-size: 1.5rem;
-    margin-right: 0.5rem;
-    transition: transform 0.3s ease;
-  }
+
+.skill i {
+  font-size: 1.5rem;
+  margin-right: 0.5rem;
+  transition: transform 0.3s ease;
+}
   
-  /* Efeito de crescimento do ícone ao passar o mouse */
-  .skill:hover i {
-    transform: scale(1.2);
-  }
-/* Formulário de contato */
+
+.skill:hover i {
+  transform: scale(1.2);
+}
+
 .contact-form {
   max-width: 600px;
   margin: 0 auto;
@@ -185,7 +182,7 @@ body {
   font-size: 1rem;
 }
 
-/* Responsividade */
+
 @media (max-width: 768px) {
   .header-nav {
     flex-direction: column;
